@@ -28,28 +28,27 @@
 		<tm.impl.artifactId>tm-oss</tm.impl.artifactId>
 		<tm.oss.module>tm-oss</tm.oss.module>
 		<mongo.version>5.5.1</mongo.version>
-		<tapdata-api.version>2.0.5-SNAPSHOT</tapdata-api.version>
-		<tapdata-pdk-api.version>2.0.5-SNAPSHOT</tapdata-pdk-api.version>
-		<tapdata-common.version>2.5-SNAPSHOT</tapdata-common.version>
-		<tapdata-common.version>2.5-SNAPSHOT</tapdata-common.version>
-		<modules-api.version>2.5-SNAPSHOT</modules-api.version>
+		<tapdata-api.version>2.0.7-SNAPSHOT</tapdata-api.version>
+		<tapdata-pdk-api.version>2.0.7-SNAPSHOT</tapdata-pdk-api.version>
+		<tapdata-common.version>2.7-SNAPSHOT</tapdata-common.version>
+		<modules-api.version>2.7-SNAPSHOT</modules-api.version>
 		<websocket-server-module.version>${modules-api.version}</websocket-server-module.version>
 		<service-skeleton-module.version>${modules-api.version}</service-skeleton-module.version>
 		<tapdata-proxy.version>${modules-api.version}</tapdata-proxy.version>
 		<mongodb-storage-module.version>${modules-api.version}</mongodb-storage-module.version>
 		<tcm.artifactId>tcm</tcm.artifactId>
 		<tcm.module>tcm-module</tcm.module>
-		<tapdata-pdk-runner.version>2.5-SNAPSHOT</tapdata-pdk-runner.version>
+		<tapdata-pdk-runner.version>2.7-SNAPSHOT</tapdata-pdk-runner.version>
 		<commons-net.version>3.11.1</commons-net.version>
 		<gson.version>2.12.1</gson.version>
 		<commons-collections4.version>4.5.0-M3</commons-collections4.version>
 		<org.bouncycastle.version>1.84</org.bouncycastle.version>
-
 		<!-- Override spring boot version -->
 		<netty.version>4.1.133.Final</netty.version>
 		<hutool.version>5.8.40</hutool.version>
-		<jackson.version>2.21.1</jackson.version>
-	</properties>
+        <github-api.version>1.330</github-api.version>
+        <jgit.version>7.5.0.202512021534-r</jgit.version>
+    </properties>
 
 	<modules>
 		<module>tm-common</module>
@@ -99,11 +98,6 @@
 				<groupId>com.tapdata</groupId>
 				<artifactId>tm-enterprise</artifactId>
 				<version>1.0.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>io.tapdata</groupId>
-				<artifactId>tapdata-common</artifactId>
-				<version>${tapdata-common.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.tapdata</groupId>
@@ -202,13 +196,20 @@
 				<artifactId>hutool-extra</artifactId>
 				<version>${hutool.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson</groupId>
-				<artifactId>jackson-bom</artifactId>
-				<version>${jackson.version}</version>
-				<scope>import</scope>
-				<type>pom</type>
-			</dependency>
+
+            <dependency>
+                <groupId>org.kohsuke</groupId>
+                <artifactId>github-api</artifactId>
+                <version>${github-api.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.jgit</groupId>
+                <artifactId>org.eclipse.jgit</artifactId>
+                <version>${jgit.version}</version>
+            </dependency>
+
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
 				<artifactId>bcprov-jdk18on</artifactId>
@@ -300,6 +301,7 @@
 							--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
 							--add-opens=java.base/java.io=ALL-UNNAMED
 							--add-opens=java.base/java.util=ALL-UNNAMED
+							--add-opens=java.base/java.time=ALL-UNNAMED
 							--add-modules=java.se
 							--add-opens=java.management/sun.management=ALL-UNNAMED
 							--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
